--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 </head>
 <body>
 <!-- Plotly chart will be drawn inside this DIV -->
-    <div id="graph" style="width:100%;height:100%"></div>
+    <!--<div id="graph" style="width:100%;height:100%;position:absolute;z-index:-1;" ></div>-->
+    <div id="graph" style="width:100%;height:100%;" ></div>
+    <div id="hoverinfo" style="width:100;height:100;margin-left:80px;position:absolute;">
+    </div>
     <!--<script src="scatter.js"></script>-->
     <!--<script src="phyloScatter-old.js"></script>-->
     <!--<script src="lines.js"></script>-->
